[Update] change figure size

--- a/index.html
+++ b/index.html
@@ -10,27 +10,29 @@
       margin-top: 50px;
     }
     img {
-      width: 300px;
+      max-width: 90%;   /* 화면 폭의 90%까지만 */
+      height: auto;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
     button {
       margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 16px;
+      padding: 12px 24px;
+      font-size: 18px;
       border: none;
-      background: #4CAF50;
+      background: #2196F3;   /* 기본 파랑 */
       color: white;
       border-radius: 8px;
       cursor: pointer;
+      transition: background 0.3s ease;
     }
+
     button:hover {
-      background: #45a049;
+      background: #1976D2;   /* hover 시 진한 파랑 */
     }
   </style>
 </head>
 <body>
-  <h1>포스터 1</h1>
   <img src="poster1.png" alt="포스터 1">
   <br>
   <button onclick="location.href='poster2.html'">예매하기</button>
