--- a/index.html
+++ b/index.html
@@ -2,39 +2,49 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>포스터 페이지 1</title>
+  <title>피아노 리사이틀 – 첫 페이지</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      text-align: center;
-      font-family: Arial, sans-serif;
-      margin-top: 50px;
+      font-family: 'Poppins', sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+      background: linear-gradient(135deg, #e3f2fd, #bbdefb);
     }
+
     img {
-      max-width: 90%;   /* 화면 폭의 90%까지만 */
+      max-width: 90%;
       height: auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
+
     button {
-      margin-top: 20px;
-      padding: 12px 24px;
+      margin-top: 30px;
+      padding: 14px 28px;
       font-size: 18px;
+      font-weight: 600;
       border: none;
-      background: #2196F3;   /* 기본 파랑 */
+      background: #2196F3;
       color: white;
-      border-radius: 8px;
+      border-radius: 12px;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
 
     button:hover {
-      background: #1976D2;   /* hover 시 진한 파랑 */
+      background: #1976D2;
+      transform: translateY(-2px);
     }
   </style>
 </head>
 <body>
   <img src="poster1.png" alt="포스터 1">
-  <br>
   <button onclick="location.href='poster2.html'">예매하기</button>
 </body>
 </html>
