[Update] 더 킹받게 메세지 수정

--- a/poster2.html
+++ b/poster2.html
@@ -65,6 +65,6 @@
 </head>
 <body>
   <img src="poster2.png" alt="포스터 2" class="poster-3d">
-  <button onclick="alert('예매 불가! 아쉽지만 전 석 매진입니다. 부디 마음속으로 응원 부탁드려요. 다음에 또 기회가 있을겁니다!')">진짜 예매하기</button>
+  <button onclick="alert('아이고~! 예매 불가! 아쉽지만 전석 매진입니다. 부디 마음속으로 응원 부탁드려요. 다음에 또 기회가 있을 겁니다!')">진짜 예매하기</button>
 </body>
 </html>
