[Update] 페이지 이름 더 열받게

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>피아노 리사이틀 – 첫 페이지</title>
+  <title>세미의 첫번째 피아노 공연</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
