--- a/poster2.html
+++ b/poster2.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>피아노 리사이틀 – 두 번째 페이지</title>
+  <title>많이많이 와주세요~ 자리는 없지만</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
