--- a/index.html
+++ b/index.html
@@ -1,50 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>세미의 첫번째 피아노 공연</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      margin: 0;
-      background: linear-gradient(135deg, #e3f2fd, #bbdefb);
-    }
-
-    img {
-      max-width: 90%;
-      height: auto;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    }
-
-    button {
-      margin-top: 30px;
-      padding: 14px 28px;
-      font-size: 18px;
-      font-weight: 600;
-      border: none;
-      background: #2196F3;
-      color: white;
-      border-radius: 12px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
-
-    button:hover {
-      background: #1976D2;
-      transform: translateY(-2px);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>콘서트 예매</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-  <img src="poster1.png" alt="포스터 1">
-  <button onclick="location.href='poster2.html'">예매하기</button>
+    <div class="container">
+        <img src="poster1.png" alt="콘서트 포스터" class="poster">
+        <button id="bookingBtn" class="booking-btn" onclick="goToBooking()">예매하기</button>
+        <p id="countdown" class="countdown"></p>
+        <button class="logout-btn" onclick="logout()">로그아웃</button>
+    </div>
+
+    <script>
+        checkLogin();
+        initBookingButton();
+    </script>
 </body>
 </html>
